sn position tablet bug

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -6,9 +6,39 @@
 	color: $snowdrift;
 	background-color: $pine-depths;
 }
+
 .footer {
 	padding-top: 20px;
 	padding-bottom: 65px;
+
+	@include media-rules(tablet) {
+		padding-top: 40px;
+		padding-bottom: 20px;
+	}
+
+	// @include media-rules(desktop) {
+	// 	padding-top: 60px;
+	// 	padding-bottom: 18px;
+	// }
+}
+
+.footer_logo_and_sections_wrapper {
+	width: 360px;
+	padding-bottom: 40px;
+	margin-bottom: 40px;
+	border-bottom: 1.01px solid rgba(221, 223, 228, 0.3);
+
+	@include media-rules(tablet) {
+		width: 886px;
+		display: flex;
+		justify-content: space-between;
+		align-items: flex-start;
+	}
+
+	// @include media-rules(desktop) {
+	// 	padding-top: 60px;
+	// 	padding-bottom: 18px;
+	// }
 }
 
 .logo {
@@ -43,6 +73,11 @@
 	font-weight: bold;
 	font-size: 18px;
 	margin-bottom: 16px;
+
+	@include media-rules(tablet) {
+		font-size: 20px;
+		margin-bottom: 24px;
+	}
 }
 
 .section_option {
@@ -54,9 +89,34 @@
 		@include transition(color);
 	}
 
+	@include media-rules(tablet) {
+		& a {
+			font-size: 16px;
+		}
+	}
+
+	&:not(:last-child) {
+		margin-bottom: 8px;
+	}
+
+	@include media-rules(tablet) {
+		&:not(:last-child) {
+			margin-bottom: 14px;
+		}
+	}
+
 	& a:hover,
 	& a:focus {
 		color: $light-color;
+	}
+}
+
+.footer_copyright_text_wrapper {
+	display: flex;
+	flex-direction: column;
+
+	@include media-rules(tablet) {
+		flex-direction: row;
 	}
 }
 
@@ -70,6 +130,14 @@
 	margin-right: auto;
 	margin-bottom: 4px;
 	border-right: 1px solid $snowdrift;
+
+	@include media-rules(tablet) {
+		font-size: 16px;
+		line-height: 1.5; // line-height: 24px;
+		padding-right: 12px;
+		margin-right: 0;
+		margin-bottom: 0;
+	}
 }
 
 .footer_copyright_goit_wrapper {
@@ -85,6 +153,12 @@
 	color: $snowdrift;
 	margin-right: 8px;
 	@include transition(font-size);
+
+	@include media-rules(tablet) {
+		font-size: 16px;
+		line-height: 1.5; // line-height: 24px;
+		padding-left: 12px;
+	}
 }
 
 .footer_copyright_goit_icon_svg {
@@ -93,6 +167,11 @@
 	align-items: center;
 	width: 58px;
 	height: 18px;
+
+	@include media-rules(tablet) {
+		width: 77px;
+		height: 23px;
+	}
 }
 
 .footer_copyright_goit_wrapper:is(:hover, :focus) {
@@ -101,6 +180,10 @@
 
 .footer_copyright_goit_wrapper:is(:hover, :focus) .footer_copyright_goit_text {
 	font-size: 16px;
+
+	@include media-rules(tablet) {
+		font-size: 18px;
+	}
 }
 
 .footer_copyright_goit_wrapper .footer_copyright_goit_icon_use {
@@ -125,11 +208,22 @@
 .footer_social_networks_wrapper {
 	margin-top: 20px;
 	display: flex;
-	gap: 8px;
+	align-items: center;
+	justify-content: center;
+	column-gap: 8px;
+
+	@include media-rules(tablet) {
+		margin-top: 0;
+	}
 }
 
 .footer_social_networks_icon {
 	width: 36px;
 	height: 36px;
 	fill: $snowdrift;
+
+	@include media-rules(tablet) {
+		width: 40px;
+		height: 40px;
+	}
 }
